2001-09-14  Bharat Mediratta  <bharat@menalto.com>

	* v1.2.1 ships!

2001-09-13  Bharat Mediratta  <bharat@menalto.com> (1.2.1-cvs-b5) 

	* Fixed bug "#461263: local upload don't work anymore!".  Thanks to
	  Jens Langner for the catch.

2001-09-12  Chris Smith  <chris@jacko.com> (1.2.1-cvs-b4) 

	* Fixed a bug that caused [add comment] in view_photo.php to not	
	  work in some circumstances. 

2001-09-10  Bharat Mediratta  <bharat@menalto.com> (1.2.1-cvs-b3) 

	* Fixed a bug that caused rotate images to appear with the wrong aspect
	  ratio when using the auto-resize code, thanks to Edouard Lafargue

	* Fixed several fairly serious security vulnerabilities thanks to
	  timely info from Mary J. Alderdice and Scott Salvidio.  

	* Updated copyright notice.

2001-09-10  Bharat Mediratta  <bharat@menalto.com> (1.2.1-cvs-b2) 

	* Fixed a harmless but annoying bug in Gallery_UserDB::getUidList()
	  where we were failing to use the full pathname to refer to a file.  

2001-09-09  Bharat Mediratta  <bharat@menalto.com> (1.2.1-cvs-b2)

	* Fixed the sporadic session timeout bug!  It was caused by the click
	  counter code stuffing way too much data into the cookie.  Cookies
	  have a 1024 byte limit and the new stuff we were putting in would
	  eventually cause the session id to drop out.  D'oh!

	* Fixed issues with sucking images via the web:
	  - Fixed timeout bug when parsing large HTML files 
	  - Prepend http: when no scheme is present (both initially and on the 
	    results of parsed data) 

	* It turns out that mod_rewrite requires the FollowSymLinks option
	  enabled (thanks to Dan Brown for catching this).  The setup wizard
	  will now turn it on for you.

2001-09-08  Bharat Mediratta  <bharat@menalto.com> (1.2.1-cvs)

	* Extended the configure instruction pages to have links to the FAQ and
	  the mailing lists

	* Dial down the error reporting (in case it's turned on for the
	  server) for now.  We'll properly address this in v2.0	
	